[package]
name = "diesel_gs3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"

[[bin]]
name = "show_posts"
doc = false

[[bin]]
name = "write_post"
doc = false

[[bin]]
name = "delete_post"
doc = false

[[bin]]
name = "publish_post"
doc = false

[lib]
doc = false